st-icon: check if gicon is null before unref.

Commit a6b49fe7d6c9bcd8a2be47a0b0b44cf9a53a45aa
introduced a check for equality of priv->gicon vs gicon
and unref then return early if so. But if both are null,
we should not unref gicon. Only return.

https://bugzilla.gnome.org/show_bug.cgi?id=698863